--- a/src/pages/question/Question.module.css
+++ b/src/pages/question/Question.module.css
@@ -6,3 +6,15 @@
     display: flex;
     gap: 24px;
 }
+
+.link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    height: 48px;
+}
+
+.link:hover {
+    background-color: rgb(255, 255, 255, .25);
+}
