--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -2,12 +2,24 @@
 .middle {
     display: flex;
     flex-direction: column;
+    flex: 1;
     gap: 12px;
     padding: 16px;
-    width: 680px;
-    background-color: rgb(255, 255, 255, .1);
     border-radius: 5px;
     margin-bottom: 24px;
+    background-color: rgba(255, 255, 255, .1);
+}
+
+@media screen and (max-width: 1200px) {
+    .middle {
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .middle {
+        margin-right: 24px;
+    } 
 }
 
 .middleNav {
