--- a/src/components/Navigator/Navigator.module.css
+++ b/src/components/Navigator/Navigator.module.css
@@ -1,9 +1,22 @@
 .left {
     display: flex;
+    width: 350px;
     flex-direction: column;
-    width: 180px;
-    background-color: rgb(255, 255, 255, .1);
     border-radius: 5px;
-    padding: 10px;
-    align-self: flex-start
+    align-self: flex-start;
+}
+
+.link {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 0 160px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .1);
+}
+
+@media screen and (max-width: 1230px) {
+    .left {
+        display: none;
+    }
 }
