--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,13 +1,22 @@
 
-
-
 .right {
     display: flex;
     flex-direction: column;
+    width: 400px;
     gap: 16px;
     width: 21.66rem;
     border-radius: 5px;
     align-self: self-start;
+}
+
+@media screen and (max-width: 900px) {
+    .right {
+        display: none;
+    }
+}
+
+.pad {
+    margin: 0 64px 0 0 ;
 }
 
 .create {
