--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -3,11 +3,9 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    gap: 12px;
-    padding: 24px;
     border-radius: 5px;
     margin-bottom: 24px;
-    background-color: rgba(255, 255, 255, .1);
+    background-color: white;
 }
 
 @media screen and (max-width: 1200px) {
@@ -25,16 +23,16 @@
 .middleNav {
     display: flex;
     gap: 24px;
-    padding: 0 0 12px 0;
-    border-bottom: 1px solid rgb(255, 255, 255, .1);
+    padding: 16px;
+    border-bottom: 1px solid var(--border-color);
 } 
 
 .active {
-    color: rgb(255, 255, 255, .4);
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .active:hover {
-    color: white;
+    color: var(--theme-color);
     cursor: pointer;
 }
 
