--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -4,38 +4,79 @@
     align-items: center;
     width: 100vw;
     height: 64px;
-    background-color: #000000;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: white;
     position: fixed;
     top: 0;
     z-index: 6;
 }
 
 .nav {
-   display: flex;
-   width: 100%;
-   height: 64px;
-   align-items: center;
+    display: flex;
+    width: 100%;
+    height: 64px;
+    align-items: center;
 }
 
 .link {
     flex: 2;
     display: flex;
-    gap: 36px;
+    align-items: center;
+    gap: 16px;
 }
 
-.headerButtons {
+.item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 64px;
+    box-sizing: border-box;
+}
+
+.item:hover {
+    color: var(--theme-color);
+}
+
+.item::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: transparent;
+    transition: background-color 0.3s ease;
+}
+
+.item:hover::after {
+    background-color: var(--theme-color);
+}
+
+.right {
     flex: 1;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     gap: 12px;
 }
 
+.wrapper {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+}
+
 .search {
-    width: 250px;
+    width: 200px;
+    height: 32px;
     border: none;
     border-radius: 5px;
-    background-color: rgb(26, 26, 26);
+    background-color: #1e80ff;
+}
+
+@media screen and (max-width: 600px) {
+    .search {
+        display: none;
+    }
 }
 
 .feedback {
@@ -59,8 +100,7 @@
 .avatar {
     width: 48px;
     height: 48px;
-    background-color: #fff;
     color: black;
-    border: none;
     border-radius: 588px;
+    border: 1px solid var(--theme-color);
 }
