--- a/src/components/Navigator/Navigator.module.css
+++ b/src/components/Navigator/Navigator.module.css
@@ -12,10 +12,10 @@
     margin: 0 0 0 160px;
     border: none;
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, .1);
+    background-color: white;
 }
 
-@media screen and (max-width: 1230px) {
+@media screen and (max-width: 1200px) {
     .left {
         display: none;
     }
