--- a/src/layout/post/PostStatus/PostStatus.module.css
+++ b/src/layout/post/PostStatus/PostStatus.module.css
@@ -23,14 +23,14 @@
     width: 16px;
     height: 16px;
     border-radius: 500px;
-    background-color: rgba(255, 255, 255, .5);
+    background-color: var(--theme-color);
 }
 
 .hr {
     margin: 40px 0;
     width: 50px;
     height: 1px;
-    border-color: rgba(255, 255, 255, .1);
+    border-color: rgba(0, 0, 0, 0.1);
 }
 
 .leftButtom {
@@ -46,5 +46,5 @@
     width: 48px;
     height: 48px;
     border-radius: 500px;
-    background-color: rgb(255, 255, 255, .1);
+    background-color: white;
 }
