--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,16 +8,25 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: black;
+  background-color: var(--background-color);
 }
 
 a {
-  color: inherit;
+  color: var(--font-color);
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+} */
+
+:root {
+  --background-color: rgb(242, 243, 245, .8);
+  --card-color: rgb(242, 243, 245, .6);
+  --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  --font-color: rgb(82, 87, 102);
+  --border-color: rgba(83, 60, 60, 0.2);
+  --theme-color: #1e80ff;
 }
