--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -3,7 +3,13 @@
     line-height: 28px;
     font-size: 16px;
     font-weight: 400;
-    color: rgba(255, 255, 245, .86);
+    color: var(--font-color);
+}
+
+.md table {
+    padding: 16px;
+    border: 1px solid var(--theme-color);
+    border-radius: 5px;
 }
 
 .md h1 {
@@ -20,7 +26,7 @@
     line-height: 32px;
     font-size: 24px;
     font-weight: 600px;
-    margin-top: 48px;
+    margin-top: 24px;
     margin-bottom: 16px;
     padding-top: 24px;
     border-top: 1px solid rgba(82, 82, 89, .32);
@@ -32,7 +38,7 @@
     line-height: 28px;
     font-size: 20px;
     font-weight: 600px;
-    margin-top: 32px;
+    margin-top: 24px;
     color: rgba(194, 141, 190, 0.86);
 }
 
@@ -40,7 +46,7 @@
     line-height: 28px;
     font-size: 20px;
     font-weight: 600px;
-    margin-top: 32px;
+    margin-top: 24px;
     color: rgba(47, 120, 69, 0.86);
 }
 
@@ -48,7 +54,7 @@
     line-height: 28px;
     font-size: 20px;
     font-weight: 600px;
-    margin-top: 32px;
+    margin-top: 24px;
     color: rgba(66, 93, 180, 0.86);
 }
 
